--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,17 @@
     <link rel="icon" type="image/png" href="{% static 'logo.png' %}"/>
     <title>DPanel - {% block title%}{% endblock %}</title>
 
+    <!--Select2-->
+    <link rel="stylesheet" href="{% static 'select2/select2.min.css' %}" />
+
     {% if LANGUAGE_BIDI == True %}
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.rtl.min.css' %}">
+    <!--Select2 RTL B theme-->
+    <link rel="stylesheet" href="{% static 'select2/select2-bootstrap-5-theme.rtl.min.css' %}" />
     {% else %}
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+    <!--Select2 B theme-->
+    <link rel="stylesheet" href="{% static 'select2/select2-bootstrap-5-theme.min.css' %}" />
     {% endif %}
     <link rel="stylesheet" href="{% static 'bootstrap/css/root.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap/font/bootstrap-icons.css' %}">
@@ -73,7 +80,11 @@
     </div>
 </div>
 
+<!--Select2 js-->
+<script src="{% static 'select2/select2.min.js' %}"></script>
+<!--Sweetalert2 js-->
 <script src="{% static 'sweetalert2.js' %}"></script>
+<!--Bootstrap js-->
 <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'scripts.js' %}"></script>
 
