--- a/templates/mysql/list.html
+++ b/templates/mysql/list.html
@@ -7,6 +7,7 @@
         <tr>
             <th style="width: 0">#</th>
             <th>{% translate 'Name' %}</th>
+            <th>{% translate 'Size' %}</th>
             <th>{% translate 'Users' %}</th>
             <th></th>
         </tr>
@@ -20,6 +21,7 @@
                         {{database.name}}
                     </a>
                 </td>
+                <td>{{database.get_size}}<small>KB</small></td>
                 <td>{{database.users.all|join:', '|default:_('N/A')}}</td>
                 <td>
                     <div class="dropdown">
