--- a/templates/app/python/list.html
+++ b/templates/app/python/list.html
@@ -47,7 +47,7 @@
                                     </span>
                                 </li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li class="dropdown-item pointer" onclick="open_link_confirm('{% url 'app_requirements_install' app.serial %}', '{% trans 'Install requirements' %}', '{% trans 'All libraries in requirements.txt will be installed' %}')">
+                                <li class="dropdown-item pointer" onclick="open_link_confirm('{% url 'python_app_requirements_install' app.serial %}', '{% trans 'Install requirements' %}', '{% trans 'All libraries in requirements.txt will be installed' %}')">
                                     <span class="dropdown-link">
                                         {% translate 'Requirements' %}
                                         <i class="bi bi-file-earmark-text float-end"></i>
@@ -69,7 +69,7 @@
                             </button>
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li>
-                                    <a href="javascript:void(0)" class="dropdown-item" onclick="open_link_confirm('{% url 'app_restart' app.serial %}', '{% trans 'Restart app' %}', '{% trans 'Do you want to restart this app    ?' %}')">
+                                    <a href="javascript:void(0)" class="dropdown-item" onclick="open_link_confirm('{% url 'python_app_restart' app.serial %}', '{% trans 'Restart app' %}', '{% trans 'Do you want to restart this app    ?' %}')">
                                         {% trans 'Restart' %}
                                         <i class="bi bi-arrow-clockwise float-end"></i>
                                     </a>
@@ -77,12 +77,12 @@
                                 <li><hr class="dropdown-divider"></li>
                                 <li>
                                     {% if app.is_active %}
-                                    <a href="javascript:void(0)" class="dropdown-item" onclick="open_link_confirm('{% url 'app_status' app.serial %}', '{% trans 'Stop app' %}', '{% trans 'Do you want to stop this app ?' %}')">
+                                    <a href="javascript:void(0)" class="dropdown-item" onclick="open_link_confirm('{% url 'python_app_status' app.serial %}', '{% trans 'Stop app' %}', '{% trans 'Do you want to stop this app ?' %}')">
                                         {% trans 'Stop' %}
                                         <i class="bi bi-stop-circle text-danger float-end"></i>
                                     </a>
                                     {% else %}
-                                    <a href="javascript:void(0)" class="dropdown-item" onclick="open_link_confirm('{% url 'app_status' app.serial %}', '{% trans 'Start app' %}', '{% trans 'Do you want to start this app ?' %}')">
+                                    <a href="javascript:void(0)" class="dropdown-item" onclick="open_link_confirm('{% url 'python_app_status' app.serial %}', '{% trans 'Start app' %}', '{% trans 'Do you want to start this app ?' %}')">
                                         {% trans 'Start' %}
                                         <i class="bi bi-play-circle text-success float-end"></i>
                                     </a>
@@ -96,21 +96,21 @@
                             </button>
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li>
-                                    <a class="dropdown-item" href="javascript:void(0)" onclick="dPanelPopup('{% url 'app_log' app.serial %}')">
+                                    <a class="dropdown-item" href="javascript:void(0)" onclick="dPanelPopup('{% url 'python_app_log' app.serial %}')">
                                         {% trans 'Log' %}
                                         <i class="bi bi-file-text float-end"></i>
                                     </a>
                                 </li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li>
-                                    <a class="dropdown-item" href="{% url 'app_edit' app.serial %}">
+                                    <a class="dropdown-item" href="{% url 'python_app_edit' app.serial %}">
                                         {% trans 'Edit' %}
                                         <i class="bi bi-pencil-square float-end"></i>
                                     </a>
                                 </li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li>
-                                    <span class="dropdown-item pointer text-danger" onclick="open_link_confirm('{% url 'app_delete' app.serial %}', '{% trans 'Delete app' %} : {{app.name}}', '{% trans 'Do you want to delete this app ?' %}', true)">
+                                    <span class="dropdown-item pointer text-danger" onclick="open_link_confirm('{% url 'python_app_delete' app.serial %}', '{% trans 'Delete app' %} : {{app.name}}', '{% trans 'Do you want to delete this app ?' %}', true)">
                                         {% trans 'Delete' %}
                                         <i class="bi bi-trash float-end"></i>
                                     </span>
