Improve pip install in python apps section

--- a/templates/inc/scripts.html
+++ b/templates/inc/scripts.html
@@ -92,7 +92,7 @@
                         url: "{% url 'python_app_package_install' %}",
                         dataType: "json",
                         data: {
-                            'package': value,
+                            'packages': value,
                             'app': app
                         },
                         beforeSend: function () {
