Improve Apps And domains Forms and Controls

--- a/templates/app/python/apps.html
+++ b/templates/app/python/apps.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %} {% translate 'Apps' %} {% endblock%}
-{% block page_title %}{% trans 'All apps' %}{% endblock %}
+{% block title %} {% translate 'Python apps' %} {% endblock%}
+{% block page_title %}{% trans 'Python apps' %}{% endblock %}
 
 {% block title_button %}
 <a class="btn btn-primary btn-sm rounded-pill" href="{% url 'python_app_new' %}">
