--- a/templates/app/python/new.html
+++ b/templates/app/python/new.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %} {% translate 'New app' %} {% endblock %}
-{% block page_title %} {% translate 'New app' %} {% endblock %}
+{% block title %} {% translate 'New python app' %} {% endblock %}
+{% block page_title %} {% translate 'New python app' %} {% endblock %}
 
 
 {% block content %}
