--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -21,10 +21,18 @@
                                 {% trans 'Domains' %}
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'apps' %}">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="javascript:void(0)" data-bs-toggle="dropdown" aria-expanded="false">
                                 {% trans 'Apps' %}
                             </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'apps' %}">
+                                        {% trans 'Python' %}
+                                        <img src="{% static 'images/python.svg' %}" width="16px" alt="Python" class="mt-1 float-end">
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="javascript:void(0)" data-bs-toggle="dropdown" aria-expanded="false">
