--- a/templates/inc/manage.html
+++ b/templates/inc/manage.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div class="dropdown d-inline">
-    <button class="btn btn-secondary btn-sm rounded-pill dropdown-toggle" type="button" id="dropdownRestart" data-bs-toggle="dropdown" aria-expanded="false">
+    <button class="btn btn-warning btn-sm rounded-pill dropdown-toggle" type="button" id="dropdownRestart" data-bs-toggle="dropdown" aria-expanded="false">
         {% translate 'Restart' %}
     </button>
     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownRestart">
