--- a/templates/mysql/user/users.html
+++ b/templates/mysql/user/users.html
@@ -18,7 +18,7 @@
 {% include 'inc/paginator.html' with query=the_users %}
 {% else %}
 <div class="bg-white shadow-sm p-3 rounded">
-    {% trans 'No the_users found' %}
+    {% trans 'No users found' %}
 </div>
 {% endif %}
 {% endblock %}
