--- a/templates/app/python/edit.html
+++ b/templates/app/python/edit.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %} {% translate 'Edit app' %} - {{app.name}} {% endblock %}
-{% block page_title %} {% translate 'Edit app' %} - {{app.name}} {% endblock %}
+{% block title %} {% translate 'Edit python app' %} - {{app.name}} {% endblock %}
+{% block page_title %} {% translate 'Edit python app' %} - {{app.name}} {% endblock %}
 
 
 {% block content %}
