--- a/templates/app/python/list.html
+++ b/templates/app/python/list.html
@@ -8,7 +8,7 @@
             <th>{% translate 'Domain' %}</th>
             <th>{% translate 'Port' %}</th>
             <th style="min-width: 300px">{% translate 'Environment' %}</th>
-            <th>{% translate 'Date' %}</th>
+            <th>{% translate 'Created' %}</th>
             <th></th>
         </tr>
         </thead>
@@ -40,18 +40,18 @@
                                 <li>
                                     <h6 class="dropdown-header">{% translate 'Install' %}</h6>
                                 </li>
-                                <li class="dropdown-item pointer" onclick="install_package('{{app.serial}}')">
-                                    <span class="dropdown-link">
+                                <li>
+                                    <a class="dropdown-item" href="javascript:void(0)" onclick="install_package('{{app.serial}}')">
                                         {% translate 'Package' %}
                                         <i class="bi bi-box float-end"></i>
-                                    </span>
+                                    </a>
                                 </li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li class="dropdown-item pointer" onclick="open_link_confirm('{% url 'python_app_requirements_install' app.serial %}', '{% trans 'Install requirements' %}', '{% trans 'All libraries in requirements.txt will be installed' %}')">
-                                    <span class="dropdown-link">
+                                <li>
+                                    <a class="dropdown-item" href="javascript:void(0)" onclick="open_link_confirm('{% url 'python_app_requirements_install' app.serial %}', '{% trans 'Install requirements' %}', '{% trans 'All libraries in requirements.txt will be installed' %}')">
                                         {% translate 'Requirements' %}
                                         <i class="bi bi-file-earmark-text float-end"></i>
-                                    </span>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -64,7 +64,7 @@
                     <div class="float-end">
                         <div class="dropdown d-inline ms-1" data-bs-toggle="tooltip" title="{% if app.is_active %}{% trans 'Running' %}{% else %}{% trans 'Stopped' %}{% endif %}">
                             <button type="button" class="btn btn-{% if app.is_active %}success{% else %}danger{% endif %} btn-sm rounded-pill border" data-bs-toggle="dropdown">
-                                {% trans 'Power' %}
+                                {% trans 'Control' %}
                                 <i class="bi bi-lightning-charge"></i>
                             </button>
                             <ul class="dropdown-menu dropdown-menu-end">
@@ -110,10 +110,10 @@
                                 </li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li>
-                                    <span class="dropdown-item pointer text-danger" onclick="open_link_confirm('{% url 'python_app_delete' app.serial %}', '{% trans 'Delete app' %} : {{app.name}}', '{% trans 'Do you want to delete this app ?' %}', true)">
+                                    <a class="dropdown-item" href="javascript:void(0)" onclick="open_link_confirm('{% url 'python_app_delete' app.serial %}', '{% trans 'Delete app' %} : {{app.name}}', '{% trans 'Do you want to delete this app ?' %}', true)">
                                         {% trans 'Delete' %}
-                                        <i class="bi bi-trash float-end"></i>
-                                    </span>
+                                        <i class="bi bi-trash float-end text-danger"></i>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
