--- a/templates/domain/list.html
+++ b/templates/domain/list.html
@@ -7,7 +7,7 @@
             <th>{% translate 'Name' %}</th>
             <th style="min-width: 300px">{% translate 'Path' %}</th>
             <th>{% translate 'SSL' %} <small class="text-muted">(beta)</small></th>
-            <th>{% translate 'Date' %}</th>
+            <th>{% translate 'Created' %}</th>
             <th></th>
         </tr>
         </thead>
@@ -46,25 +46,37 @@
                     {{domain.created|date:"d-m-Y"}}
                 </td>
                 <td>
-                    <div class="float-end">
-                        <div class="dropdown d-inline ms-1" data-bs-toggle="tooltip" title="{% trans 'Settings' %}">
-                            <i class="bi bi-gear fs-4 pointer" data-bs-toggle="dropdown"></i>
-                            <ul class="dropdown-menu dropdown-menu-end">
-                                <li>
-                                    <a class="dropdown-item" href="javascript:void(0)" onclick="open_link_confirm('{% url 'domain_config' domain.serial %}', '{% trans 'Confing' %}: {{domain.name}}', '{% trans 'Be careful with this action, edit only if you know what you are doing' %}')">
-                                        {% trans 'Confing' %}
-                                        <i class="bi bi-hdd-network float-end"></i>
-                                    </a>
-                                </li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li>
-                                    <span class="dropdown-item pointer text-danger" onclick="open_link_confirm('{% url 'domain_delete' domain.serial %}', '{% trans 'Delete domain' %} : {{domain.name}}', '{% trans 'Do you want to delete this domain ?' %}', true)">
-                                        {% trans 'Delete' %}
-                                        <i class="bi bi-trash float-end"></i>
-                                    </span>
-                                </li>
-                            </ul>
-                        </div>
+                    <div class="dropdown float-end">
+                        <a href="http://{{domain.name}}" target="_blank" class="btn btn-light btn-sm border rounded-pill">
+                            <i class="bi bi-globe"></i>
+                            {% trans 'Visit' %}
+                        </a>
+                        <a href="javascript:void(0)" class="btn btn-light btn-sm border rounded-pill dropdown-toggle" data-bs-toggle="dropdown">
+                            <i class="bi bi-gear"></i>
+                            {% trans 'Manage' %}
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li>
+                                <a href="{% url 'domain_config' domain.serial %}" class="dropdown-item">
+                                    {% trans 'Config' %}
+                                    <i class="bi bi-hdd-network float-end"></i>
+                                </a>
+                            </li>
+                            <li class="dropdown-divider"></li>
+                            <li>
+                                <a href="{% url 'domain_edit' domain.serial %}" class="dropdown-item">
+                                    <i class="bi bi-pencil float-end text-success"></i>
+                                    {% trans 'Edit' %}
+                                </a>
+                            </li>
+                            <li class="dropdown-divider"></li>
+                            <li>
+                                <a href="javascript:void(0);" onclick="open_link_confirm('{% url 'domain_delete' domain.serial %}', '{% trans 'Delete domain' %}: {{domain.name}}', '', true)" class="dropdown-item">
+                                    <i class="bi bi-trash float-end text-danger"></i>
+                                    {% trans 'Delete' %}
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </td>
             </tr>
