--- a/templates/mysql/databases.html
+++ b/templates/mysql/databases.html
@@ -7,7 +7,7 @@
 {% block title_button %}
 <a class="btn btn-primary btn-sm rounded-pill" href="{% url 'mysql_database_new' %}">
     {% translate 'New database' %}
-    <i class="fas fa-plus"></i>
+    <i class="bi bi-plus"></i>
 </a>
 {% endblock %}
 
