--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -70,9 +70,9 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <span class="nav-link pointer text-success" id="check-updates">
+                            <a href="javascript:void(0)" class="nav-link pointer text-success" id="check-updates">
                                 {% trans 'Updates' %}
-                            </span>
+                            </a>
                         </li>
                         {% endif %}
                     </ul>
@@ -111,21 +111,19 @@
                             </div>
                         </li>
                         {% endif %}
-                        <li class="nav-item">
-                            <div class="nav-link dropdown" title="{% trans 'Language' %}">
-                                <div class="pointer" id="dropdownLanguage" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="bi bi-translate fs-5 float-lg-end"></i>
-                                </div>
-                                <ul class="dropdown-menu end-0 dropdown-menu-end" aria-labelledby="dropdownLanguage">
-                                    {% for language in languages %}
-                                    <li>
-                                        <a class="dropdown-item {% if language.code == LANGUAGE_CODE %} active{% endif %}" href="/{{ language.code }}/{{request.get_full_path_info|slice:'4:'}}">
-                                            {{ language.name_local }}
-                                        </a>
-                                    </li>
-                                    {% endfor %}
-                                </ul>
-                            </div>
+                        <li class="nav-item dropdown" data-bs-toggle="tooltip" data-bs-placement="bottom" title="{% trans 'Language' %}">
+                            <a href="javascript:void(0)" class="nav-link" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-translate fs-5"></i>
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                {% for language in languages %}
+                                <li>
+                                    <a class="dropdown-item {% if language.code == LANGUAGE_CODE %} active{% endif %}" href="{% url 'set_language' language.code %}">
+                                        {{ language.name_local }}
+                                    </a>
+                                </li>
+                                {% endfor %}
+                            </ul>
                         </li>
                     </ul>
                 </div>
