--- a/templates/app/python/list.html
+++ b/templates/app/python/list.html
@@ -62,7 +62,7 @@
                 </td>
                 <td>
                     <div class="float-end">
-                        <div class="dropdown d-inline ms-1" data-bs-toggle="tooltip" title="{% if app.is_active %}{% trans 'Running' %}{% else %}{% trans 'Stopped' %}{% endif %}">
+                        <div class="dropdown d-inline-block" data-bs-toggle="tooltip" title="{% if app.is_active %}{% trans 'Running' %}{% else %}{% trans 'Stopped' %}{% endif %}">
                             <button type="button" class="btn btn-{% if app.is_active %}success{% else %}danger{% endif %} btn-sm rounded-pill border" data-bs-toggle="dropdown">
                                 {% trans 'Control' %}
                                 <i class="bi bi-lightning-charge"></i>
@@ -90,7 +90,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="dropdown d-inline ms-1" data-bs-toggle="tooltip" title="{% trans 'Settings' %}">
+                        <div class="dropdown d-inline-block" data-bs-toggle="tooltip" title="{% trans 'Settings' %}">
                             <button type="button" class="btn btn-light btn-sm p-1 rounded-circle border" data-bs-toggle="dropdown">
                                 <i class="bi bi-gear fs-5 d-flex"></i>
                             </button>
