--- a/templates/inc/manage.html
+++ b/templates/inc/manage.html
@@ -1,35 +1,35 @@
 {% load i18n %}
-<div class="dropdown d-inline">
-    <button class="btn btn-warning btn-sm rounded-pill dropdown-toggle" type="button" id="dropdownRestart" data-bs-toggle="dropdown" aria-expanded="false">
+<div class="dropdown d-inline-block">
+    <button class="btn btn-warning btn-sm rounded-pill dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
         {% translate 'Restart' %}
     </button>
-    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownRestart">
+    <ul class="dropdown-menu dropdown-menu-end">
         <li>
-            <span class="dropdown-item pointer" onclick="open_link_confirm('{% url 'nginx_restart' %}', '{% trans 'Restart' %}', '{% translate 'Nginx server will be restarted immediately and al domains will be stopped until restarting' %}')">
+            <a href="javascript:void(0)" class="dropdown-item pointer" onclick="open_link_confirm('{% url 'nginx_restart' %}', '{% trans 'Restart' %}', '{% translate 'Nginx server will be restarted immediately and al domains will be stopped until restarting' %}')">
                 {% translate 'Nginx' %}
                 <i class="bi bi-hdd-network float-end"></i>
-            </span>
+            </a>
         </li>
         <li><hr class="dropdown-divider"></li>
         <li>
-            <span class="dropdown-item pointer" onclick="open_link_confirm('{% url 'uwsgi_restart' %}', '{% trans 'Restart' %}', '{% translate 'Uwsgi server will be restarted immediately and al domains will be stopped until restarting' %}')">
+            <a href="javascript:void(0)" class="dropdown-item pointer" onclick="open_link_confirm('{% url 'uwsgi_restart' %}', '{% trans 'Restart' %}', '{% translate 'Uwsgi server will be restarted immediately and al domains will be stopped until restarting' %}')">
                 {% translate 'Uwsgi' %}
                 <i class="bi bi-hdd-stack float-end"></i>
-            </span>
+            </a>
         </li>
         <li><hr class="dropdown-divider"></li>
         <li>
-            <span class="dropdown-item pointer" onclick="open_link_confirm('{% url 'mysql_restart' %}', '{% trans 'Restart' %}', '{% translate 'MySQL server will be restarted immediately and al domains will be stopped until restarting' %}')">
+            <a href="javascript:void(0)" class="dropdown-item pointer" onclick="open_link_confirm('{% url 'mysql_restart' %}', '{% trans 'Restart' %}', '{% translate 'MySQL server will be restarted immediately and al domains will be stopped until restarting' %}')">
                 MySQL
                 <i class="bi bi-database float-end"></i>
-            </span>
+            </a>
         </li>
         <li><hr class="dropdown-divider"></li>
         <li>
-            <span class="dropdown-item pointer text-danger" onclick="open_link_confirm('{% url 'server_restart' %}', '{% trans 'Restart' %}', '{% trans 'The server will be restarted immediately and al domains will be stopped until restarting' %}')">
+            <a href="javascript:void(0)" class="dropdown-item pointer text-danger" onclick="open_link_confirm('{% url 'server_restart' %}', '{% trans 'Restart' %}', '{% trans 'The server will be restarted immediately and al domains will be stopped until restarting' %}')">
                 {% translate 'Server' %}
                 <i class="bi bi-power float-end"></i>
-            </span>
+            </a>
         </li>
     </ul>
 </div>
